feat(api): update UTs, migration, pkg, oad, add erd
